Converted to ripple2

--- a/ripple.config
+++ b/ripple.config
@@ -5,29 +5,25 @@
   <SourceFolder>src</SourceFolder>
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
-  <Floats>
-    <string>Bottles</string>
-    <string>FubuCore</string>
-    <string>FubuKayak</string>
-    <string>FubuLocalization</string>
-    <string>FubuMVC.References</string>
-    <string>FubuMVC.Spark</string>
-    <string>FubuTestingSupport</string>
-    <string>HtmlTags</string>
-    <string>Serenity</string>
-    <string>Spark</string>
-    <string>FubuMVC.TestingHarness</string>
-    <string>FubuMVC.Core</string>
-    <string>FubuMVC.Core.UI</string>
-    <string>FubuMVC.Core.View</string>
-    <string>FubuMVC.SelfHost</string>
-    <string>FubuMVC.StructureMap</string>
-    <string>Storyteller</string>
-    <string>FubuMVc.Core.Assets</string>
-    <string>FubuMVC.Core.Assets</string>
-    <string>Storyteller2</string>
-    <string>FubuMVC.Katana</string>
-    <string>FubuMVC.OwinHost</string>
-    <string>FubuDocs</string>
-  </Floats>
+  <Mode>Ripple</Mode>
+  <Feeds>
+    <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" />
+    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" />
+    <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" />
+  </Feeds>
+  <Nugets>
+    <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Owin" Version="1.0" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Selenium.RC" Version="2.25.1" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Selenium.Support" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Selenium.WebDriver" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
+  </Nugets>
 </ripple>
