--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Fields\IFieldValidationRule.cs" />
     <Compile Include="Fields\IFieldValidationSource.cs" />
     <Compile Include="Fields\IsValid.cs" />
+    <Compile Include="Fields\ListValidationRule.cs" />
     <Compile Include="Fields\MaximumLengthRule.cs" />
     <Compile Include="Fields\MaxValueFieldRule.cs" />
     <Compile Include="Fields\MinimumLengthRule.cs" />
