--- a/ripple.config
+++ b/ripple.config
@@ -1,29 +1,28 @@
 <?xml version="1.0"?>
-<ripple xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<ripple xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>validation</Name>
   <NugetSpecFolder>packaging/nuget</NugetSpecFolder>
   <SourceFolder>src</SourceFolder>
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
-  <Mode>Ripple</Mode>
   <Feeds>
     <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" />
     <Feed Url="http://nuget.org/api/v2" Mode="Fixed" />
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" />
   </Feeds>
   <Nugets>
+    <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" Stability="Anything" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" Stability="Anything" />
     <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" Stability="Anything" />
-    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" Stability="Anything" />
-    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" Stability="Anything" />
-    <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" Stability="Anything" />
-    <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" Stability="Anything" />
-    <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Selenium.RC" Version="2.25.1" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Selenium.Support" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Selenium.WebDriver" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.31.2.0" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" Stability="Anything" />
+    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" Stability="Anything" />
   </Nugets>
 </ripple>
