--- a/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
+++ b/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
@@ -127,6 +127,8 @@
   <ItemGroup>
     <Compile Include="Ajax\IntegratedAjaxEndpoint.cs" />
     <Compile Include="Ajax\IntegratedAjaxTester.cs" />
+    <Compile Include="LoFi\IntegratedCollectionLoFiTester.cs" />
+    <Compile Include="LoFi\IntegratedLoFiCollectionEdpoint.cs" />
     <Compile Include="LoFi\IntegratedLoFiEndpoint.cs" />
     <Compile Include="LoFi\IntegratedLoFiTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
