Adds localization to labels for clientside validation. Closes #45

--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -122,6 +122,7 @@
     <Compile Include="AjaxValidationTester.cs" />
     <Compile Include="UI\ElementLocalizationMessagesTester.cs" />
     <Compile Include="UI\LocalizationAnnotationStrategyTester.cs" />
+    <Compile Include="UI\LocalizationLabelModifierTester.cs" />
     <Compile Include="UI\MaxValueModifierTester.cs" />
     <Compile Include="UI\MinValueModifierTester.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategyTester.cs" />
