--- a/src/FubuValidation/FubuValidation.csproj
+++ b/src/FubuValidation/FubuValidation.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Fields\IFieldValidationQuery.cs" />
     <Compile Include="Fields\IFieldValidationRule.cs" />
     <Compile Include="Fields\IFieldValidationSource.cs" />
+    <Compile Include="Fields\IgnoreClientLocalizationAttribute.cs" />
     <Compile Include="Fields\IsValid.cs" />
     <Compile Include="Fields\MaximumLengthRule.cs" />
     <Compile Include="Fields\MaxValueFieldRule.cs" />
