--- a/src/FubuValidation.StructureMap/FubuValidation.StructureMap.csproj
+++ b/src/FubuValidation.StructureMap/FubuValidation.StructureMap.csproj
@@ -53,7 +53,7 @@
     <Compile Include="ValidationBootstrapExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
+    <None Include="ripple.dependencies.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
