--- a/src/FubuMVC.Validation.Serenity/FubuMVC.Validation.Serenity.csproj
+++ b/src/FubuMVC.Validation.Serenity/FubuMVC.Validation.Serenity.csproj
@@ -125,7 +125,7 @@
     <Compile Include="ValidationMessage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="ripple.dependencies.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
