--- a/src/FubuValidation.StructureMap.Tests/FubuValidation.StructureMap.Tests.csproj
+++ b/src/FubuValidation.StructureMap.Tests/FubuValidation.StructureMap.Tests.csproj
@@ -77,10 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructureMapServiceLocatorTester.cs" />
+    <Compile Include="StructureMapSmokeTest.cs" />
     <Compile Include="ValidationBootstrapExtensionsTester.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
+    <None Include="ripple.dependencies.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
