Updates to the new FubuMVC.Ajax form activation work

--- a/ripple.config
+++ b/ripple.config
@@ -20,10 +20,11 @@
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" />
-    <Dependency Name="Selenium.RC" Version="2.25.1" Mode="Fixed" />
-    <Dependency Name="Selenium.Support" Version="2.31.2.0" Mode="Fixed" />
-    <Dependency Name="Selenium.WebDriver" Version="2.31.2.0" Mode="Fixed" />
-    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.31.2.0" Mode="Fixed" />
+    <Dependency Name="Selenium.RC" Version="2.33.0" Mode="Fixed" />
+    <Dependency Name="Selenium.Support" Version="2.33.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriver" Version="2.33.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.33.0" Mode="Fixed" />
+    <Dependency Name="Serenity" Version="0.9.8.160" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
