--- a/src/FubuMVC.Validation/validation.asset.config
+++ b/src/FubuMVC.Validation/validation.asset.config
@@ -6,7 +6,7 @@ fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, 
 
 fubuvalidation is fubuvalidation.plugin.js
 
-ValidationActivator.js requires fubuvalidation
+ValidationActivator.js requires fubuvalidation, FormActivator.js
 ValidationResultsActivator.js requires fubuvalidation
 
 specs/fubuvalidation.rules.spec.js requires fubuvalidation.core.js
