--- a/src/FubuValidation.Tests/FubuValidation.Tests.csproj
+++ b/src/FubuValidation.Tests/FubuValidation.Tests.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="ClassValidationRulesTester.cs" />
     <Compile Include="ContinuationRuleTester.cs" />
+    <Compile Include="FieldEqualityRuleTester.cs" />
     <Compile Include="Fields\attribute_scanning_tester.cs" />
     <Compile Include="Fields\ConditionalFieldRuleTester.cs" />
     <Compile Include="Fields\EmailFieldRuleTester.cs" />
